89288133-Binildas-ch11-Source/ch11/ch11-03/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: adminer
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
        group: db
    spec:
      containers:
        - name: adminer
          image: adminer:4.8.1-standalone
          ports:
          - containerPort: 8080
          imagePullPolicy: IfNotPresent
