89288133-Binildas-ch11-Source/ch11/ch11-03/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        type: db
    spec:
      volumes:                        # refers which PVC are available for this Deployment
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres:15.3-alpine3.18
          ports:
            - containerPort: 5432
          volumeMounts:              # refers which Volume (from spec.template.spec.volumes) should be used
            - name: postgres-storage   # name of the Volume
              mountPath: /var/lib/postgresql/data   # path inside the container
