89288133-Binildas-ch11-Source/ch11/ch11-03/product-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-server
  labels:
    app: product-server
    group: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-server
  template:
    metadata:
      labels:
        app: product-server
        group: backend
    spec:
      containers:
      - name: product-server
        image: ecom/product-server
        ports:
        - containerPort: 8081
        imagePullPolicy: Never
