89288133-Binildas-ch11-Source/ch11/ch11-03/product-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-web
  labels:
    app: product-web
    group: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-web
  template:
    metadata:
      labels:
        app: product-web
        group: frontend
    spec:
      containers:
      - name: product-web
        image: ecom/product-web
        ports:
        - containerPort: 8080
        imagePullPolicy: Never
