89288133-Binildas-ch11-Source/ch11/ch11-03/adminer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels: 
    group: db
spec:
  type: ClusterIP
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
