89288133-Binildas-ch11-Source/ch11/ch11-03/product-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-server
  labels: 
    group: backend
spec:
  type: ClusterIP
  selector:
    app: product-server
  ports:
    - port: 8081
      targetPort: 8081
