89288133-Binildas-ch11-Source/ch11/ch11-03/product-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-web
  labels: 
    group: frontend
spec:
  type: NodePort
  selector:
    app: product-web
  ports:
    - port: 8080
      targetPort: 8080
